--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div class="col-12 col-sm">
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a class="btn btn-large btn-block btn-warning col-sm" href="#Reserve"><strong>Reserve Table</strong></a>
+                </div>
+
             </div>
         </div>
     </header>
@@ -77,8 +81,16 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
+                <div class="media">
+                    <div class="media-body">
+                <h2>Weekend Grand Buffet
+                    <span class="badge badge-danger">NEW</span>
+                </h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex ml-3 img-thumbnail align-self-center"
+                        src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -101,6 +113,59 @@
                 </div>
             </div>
         </div>
+        </div>
+
+        <div class="row row-content align-items-center">
+            <div class="card col-sm-8 offset-2">
+                <h2 class="card-header bg-warning text-white"><a id="Reserve"></a>Reserve a Table</h2>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="numberOfGuests" class="col-8 col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                                    <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="1Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio1">1</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="2Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio2">2</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="3Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio3">2</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="4Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio4">4</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="5Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio5">5</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberOfGuestsOptions" id="6Guest" value="option1">
+                                    <label class="form-check-label" for="guestRadio6">6</label>
+                                  </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="datetime" class="col-8 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-12 col-md-4">
+                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
