npm scripts part 1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <a data-toggle="modal" data-target="#loginModal">
+            <!-- New id for assignment 4-->
+            <a id="loginButton">
               <span class="fa fa-sign-in"></span> Login</a
             >
           </span>
@@ -78,7 +79,8 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Login</h4>
-            <button type="button" class="close" data-dismiss="modal">
+            <!-- New id for assignment 4-->
+            <button type="button" class="close" id="cancelButton3">
               &times;
             </button>
           </div>
@@ -115,10 +117,11 @@
                 </div>
               </div>
               <div class="form-row">
+                <!-- New id for assignment 4-->
                 <button
+                   id="cancelButton4"
                   type="button"
-                  class="btn btn-secondary btn-sm ml-auto"
-                  data-dismiss="modal"
+                  class="btn btn-secondary btn-sm ml-auto"              
                 >
                   Cancel
                 </button>
@@ -138,7 +141,8 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Reserve a Table</h4>
-            <button type="button" class="close" data-dismiss="modal">
+            <!-- New id for assignment 4-->
+            <button type="button" class="close" id="cancelButton1">
               &times;
             </button>
           </div>
@@ -251,14 +255,16 @@
               </div>
               <div class="form-group row">
                 <div class="offset-md-2 col-md-10">
+                   <!-- new id for assignment 4-->
                   <button
+                    id="cancelButton2"
                     type="button"
-                    class="btn btn-secondary ml-auto"
-                    data-dismiss="modal"
+                    class="btn btn-secondary ml-auto"                  
+                    
                   >
                     Cancel
                   </button>
-                  <button type="submit" class="btn btn-primary  ml-auto">
+                  <button type="submit" class="btn btn-primary  ml-auto" >
                     Reserve
                   </button>
                 </div>
@@ -286,11 +292,10 @@
                 <img src="img/logo.png" class="img-fluid" />
               </div>
               <div class="col-12 col-sm">
-                <a
+                <!-- new id for assignment 4-->
+                <a id="reserveButton"    
                   role="button"
-                  class="btn btn-block nav-link btn-warning"
-                  data-toggle="modal"
-                  data-target="#reserveModal"
+                  class="btn btn-block nav-link btn-warning"                  
                   >Reserve Table</a
                 >
               </div>
@@ -462,23 +467,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function(){
-          $("#mycarousel").carousel( { interval: 2000 } );
-          $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
-                }
-            });
-      });
-  </script>
+	<script src="js/scripts.js"></script>
 
   </body>
 </html>
