--- a/aboutus.html
+++ b/aboutus.html
@@ -8,8 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-
+    <title>Ristorante Con Fusion: About Us</title>
     <!-- Bootstrap CSS -->
+    	<!-- build:css css/main.css -->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -23,7 +24,8 @@
       href="node_modules/bootstrap-social/bootstrap-social.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Ristorante Con Fusion: About Us</title>
+    <!-- endbuild -->
+
   </head>
 
   <body>
@@ -366,8 +368,10 @@
       </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- endbuild --
   </body>
 </html>
