--- a/aboutus.html
+++ b/aboutus.html
@@ -39,7 +39,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand mr-auto" href="#"
+        <a class="navbar-brand mr-auto" href="./index.html"
           ><img src="img/logo.png" height="30" width="41"
         /></a>
         <div class="collapse navbar-collapse" id="Navbar">
@@ -79,7 +79,7 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm align-self-center">
+          <div class="col-12 col-sm-6 d-sm-flex justify-content-center align-self-center">
             <img src="img/logo.png" class="img-fluid" />
           </div>
         </div>
@@ -144,8 +144,7 @@
                 Yogi Berra,
                 <cite title="Source Title"
                   >The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books,
-                  2014</cite
-                >
+                  2014</cite>
               </footer>
             </blockquote>
           </div>
@@ -181,78 +180,78 @@
               </p>
               </div>
               </div>
-            </div>
+            </div> <!-- Card with peter-->
 
             <div class="card">
-              <div class="card-header" role="tab" id="dannyhead">
-              <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapse" data-target="#danny">
-                  Dhanasekaran Witherspoon <small>Chief Food Officer</small>
-                  </a>
-              </h3>
-          </div>
-          <div class="collapse" id="danny" data-parent="#accordion">
-              <div class="card-body">
-                <p class="d-none d-sm-block">
-                  Our CFO, Danny, as he is affectionately referred to by his
-                  colleagues, comes from a long established family tradition in
-                  farming and produce. His experiences growing up on a farm in the
-                  Australian outback gave him great appreciation for varieties of
-                  food sources. As he puts it in his own words,
-                  <em
-                    >Everything that runs, wins, and everything that stays,
-                    pays!</em
-                  >
-                </p>
+                  <div class="card-header" role="tab" id="dannyhead">
+                  <h3 class="mb-0">
+                      <a class="collapsed" data-toggle="collapse" data-target="#danny">
+                      Dhanasekaran Witherspoon <small>Chief Food Officer</small>
+                      </a>
+                  </h3>
               </div>
-          </div>
-      </div>
-      <div class="card">
-              <div class="card-header" role="tab" id="agumbehead">
-              <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapse" data-target="#agumbe">
-                  Agumbe Tang <small>Chief Taste Officer</small>
-                  </a>
-              </h3>
-          </div>
-          <div class="collapse" id="agumbe" data-parent="#accordion">
-              <div class="card-body">
-                <p class="d-none d-sm-block">
-                  Blessed with the most discerning gustatory sense, Agumbe, our
-                  CTO, personally ensures that every dish that we serve meets his
-                  exacting tastes. Our chefs dread the tongue lashing that ensues
-                  if their dish does not meet his exacting standards. He lives by
-                  his motto,
-                  <em>You click only if you survive my lick.</em>
-                </p>
+              <div class="collapse" id="danny" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="d-none d-sm-block">
+                      Our CFO, Danny, as he is affectionately referred to by his
+                      colleagues, comes from a long established family tradition in
+                      farming and produce. His experiences growing up on a farm in the
+                      Australian outback gave him great appreciation for varieties of
+                      food sources. As he puts it in his own words,
+                      <em
+                        >Everything that runs, wins, and everything that stays,
+                        pays!</em
+                      >
+                    </p>
+                  </div>
               </div>
-          </div>
-      </div>
-      <div class="card">
-              <div class="card-header" role="tab" id="albertohead">
-              <h3 class="mb-0">
-                  <a class="collapsed" data-toggle="collapse" data-target="#alberto">
-                  Alberto Somayya <small>Executive Chef</small>
-                  </a>
-              </h3>
-          </div>
-          <div class="collapse" id="alberto" data-parent="#accordion">
-              <div class="card-body">
-                <p class="d-none d-sm-block">
-                  Award winning three-star Michelin chef with wide International
-                  experience having worked closely with whos-who in the culinary
-                  world, he specializes in creating mouthwatering Indo-Italian
-                  fusion experiences. He says,
-                  <em
-                    >Put together the cuisines from the two craziest cultures, and
-                    you get a winning hit! Amma Mia!</em
-                  >
-                </p>
+          </div> <!-- Card with danny-->
+          <div class="card">
+                  <div class="card-header" role="tab" id="agumbehead">
+                  <h3 class="mb-0">
+                      <a class="collapsed" data-toggle="collapse" data-target="#agumbe">
+                      Agumbe Tang <small>Chief Taste Officer</small>
+                      </a>
+                  </h3>
               </div>
-          </div>
-      </div>
+              <div class="collapse" id="agumbe" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="d-none d-sm-block">
+                      Blessed with the most discerning gustatory sense, Agumbe, our
+                      CTO, personally ensures that every dish that we serve meets his
+                      exacting tastes. Our chefs dread the tongue lashing that ensues
+                      if their dish does not meet his exacting standards. He lives by
+                      his motto,
+                      <em>You click only if you survive my lick.</em>
+                    </p>
+                  </div>
+              </div>
+          </div> <!-- Card with agumbe-->
+          <div class="card">
+                  <div class="card-header" role="tab" id="albertohead">
+                  <h3 class="mb-0">
+                      <a class="collapsed" data-toggle="collapse" data-target="#alberto">
+                      Alberto Somayya <small>Executive Chef</small>
+                      </a>
+                  </h3>
+              </div>
+              <div class="collapse" id="alberto" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="d-none d-sm-block">
+                      Award winning three-star Michelin chef with wide International
+                      experience having worked closely with whos-who in the culinary
+                      world, he specializes in creating mouthwatering Indo-Italian
+                      fusion experiences. He says,
+                      <em
+                        >Put together the cuisines from the two craziest cultures, and
+                        you get a winning hit! Amma Mia!</em
+                      >
+                    </p>
+                  </div>
+              </div>
+          </div> <!-- Card with albert-->
 
-          </div>
+        </div> <!-- accordian-->
             
           </div>
         </div>
@@ -298,7 +297,7 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div> <!-- table -->
         </div>
       </div>
     </div>
@@ -314,7 +313,7 @@
               <li><a href="#">Menu</a></li>
               <li><a href="./contactus.html">Contact</a></li>
             </ul>
-          </div>
+          </div> <!-- Link coloumn-->
           <div class="col-7 col-sm-5">
             <h5>Our Address</h5>
             <address>
@@ -326,8 +325,8 @@
               <i class="fa fa-envelope fa-lg"></i>:
               <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
-          </div>
-          <div class="col-12 col-sm-4 align-self-center">
+          </div> <!-- Address column-->
+          <div class="col-12 col-sm-4 align-self-center pt-2">
             <div class="text-center">
               <a
                 class="btn btn-social-icon btn-google"
@@ -359,12 +358,12 @@
               ></a>
             </div>
           </div>
-        </div>
+        </div> <!-- row footer -->
         <div class="row justify-content-center">
           <div class="col-auto">
             <p>© Copyright 2018 Ristorante Con Fusion</p>
           </div>
-        </div>
+        </div> <!-- row copyright-->
       </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
@@ -372,6 +371,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- endbuild --
+    <!-- endbuild -->
   </body>
 </html>
